respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/CSH_Shipment__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Default_Freight_Mode_Pick_Ship__c</fullName>
        <label>Default Freight Mode Pick &amp; Ship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Freight_Mode__c</fullName>
        <label>Default Freight Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Supply_Project_Customer_Buyer__c</fullName>
        <label>Default Supply Project Customer/Buyer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Packaging_Data_Lookup_Id__c</fullName>
        <label>Transport Packaging Data Lookup Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>CSH Shipment</label>
</CustomObject>